# refinery-ibm-bob

./: .gitignore  Dockerfile  INTEREST01_MODIFIED.cob  INTEREST01_ORIGINAL.cob  PAYROLL01_MODIFIED.cob  PAYROLL01_ORIGINAL.cob  README.md  mcp_server.py  packages.txt  pyproject.toml  render.yaml  requirements.txt
audit/: __main__.py  ast_diff.py  cfg.py  cli.py  complexity.py  differ.py  engine.py  equivalence.py  exception_injection.py  io_tracer.py  models.py  pic_boundary.py  redefines.py  report.py
audit/templates/: report.html
bob/: __init__.py  corrector.py  models.py  narrator.py  optimizer.py  prompt_template.txt
bob/providers/: __init__.py  demo.py  ibm_bob.py  local.py  openai.py
bob/rag/: embedder.py  ingester.py  retriever.py
bob_sessions/: HACKATHON-BOB-REPORT.md  IBM-Bob-settings.json  bob_task_may-16-2026_5-04-218-pm.md  bob_task_may-16-2026_6-355-23-pm.md  bob_task_may-17-2026_1-18-16-am.md  bob_task_may-17-2026_2-24-10-pm.md  bob_task_may-17-2026_2-25-30-am.md  bob_task_may-17-2026_2-59-09-am.md
emulator/: Dockerfile.pool-server  __init__.py  hercules_runner.py  pool.py  pool_server.py  real_runner.py  remote_pool.py  smf_proxy.py  synthetic_runner.py
emulator/bridge/: jcl_builder.py
emulator/config/: batch_job.jcl
emulator/samples/: bank_account_original.cob  stresstest.cob  (+6 more)
estate/: __main__.py  graph.py  impact.py  indexer.py
parser/: __init__.py  ast_features.py  cobol_parser.py  transforms.py
portal/: auth.py  db.py  main.py
streamlit_app/: app.py
vscode-extension/: package-lock.json  package.json  refinery-vscode-0.1.0.vsix
(+1142 files in other folders)
