[project]
name = "refinery-ibm-bob"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "tree-sitter>=0.21",
    "tree-sitter-languages>=1.10",
    "weasyprint>=61.0",
    "jinja2>=3.1",
    "reportlab>=4.5.0",
    "python-multipart>=0.0.27",
    "streamlit>=1.35",
    "networkx>=3.3",
    "fastmcp>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audit", "bob", "estate", "parser", "emulator", "portal", "streamlit_app"]
