[project]
name = "refinery"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "pydantic>=2.0",
    "numpy>=1.26",
    "tree-sitter>=0.21",
    "tree-sitter-languages>=1.10",
    "jinja2>=3.1",
    "weasyprint>=61.0",
    "reportlab>=4.5.0",
    "networkx>=3.3",
    "httpx>=0.27",
    "fastmcp>=2.0",
    "python-multipart>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refinery"]
